# my-site

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  dev.sh  docker-compose.yml  release-please-config.json
.claude/: CLAUDE.md  settings.json
.claude/agents/: aws-architect.md  backend-engineer.md  database-engineer.md  security-auditor.md  test-engineer.md  uiux-engineer.md
.claude/rules/: aws-cdk.md  backend.md  documentation.md  frontend.md  git-workflow.md  postgresql-schema.md  postgresql-style.md  postgresql_database.md
.claude/tasks/: lessons.md  todo.md  (+1 more)
.github/: dependabot.yml  release.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/src/: lambda_handler.py
backend/src/app/: _version.py  config.py  database.py  dependencies.py  main.py
backend/src/app/middleware/: auth.py  cors.py  logging.py  rate_limit.py
backend/src/app/models/: tables.py
backend/src/app/routers/: admin.py  analytics.py  blog.py  health.py  media.py  personal.py  resume.py  showcase.py
backend/src/app/schemas/: analytics.py  blog.py  geoip.py  logs.py  media.py  resume.py  showcase.py
backend/src/app/services/: cognito.py  db_functions.py  geoip_trigger.py  storage.py
backend/tests/: conftest.py  test_admin.py  test_blog.py  test_cognito.py  test_db_functions.py  test_health.py  test_media.py  test_resume.py  test_showcase.py
config/: site.example.json
docs/: architecture.md  aws-setup.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
tasks/: lessons.md  todo.md
(+198 files in other folders)
